--- a/VideoBannerView/build.gradle
+++ b/VideoBannerView/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
 
@@ -39,10 +39,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile(name: 'vitamio', ext: 'aar')
-    //    compile 'com.squareup.pic
     compile project(':vitamio')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
-    compile 'com.facebook.fresco:fresco:0.12.0'
+//    compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
